bin/testsuite/tests/compiler/src/errors/compiler5011.swg
#global testerror "Err0626"
#test
{
    let a = @mkinterface(0, 0, 0)
}
